--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="fetchBookmarks()">
     <div class="site-wrapper">
         <div class="inner">
-            <h3 class="masthead-brand"><img style="margin-left: 30px; margin-top: -15px;" src="img/logo.PNG"> </h3>
+            <h3 class="masthead-brand"><img style="margin-left: 30px; margin-top: -15px;" src="img/logo.png"> </h3>
             <nav style="margin-right: 200px;">
                 <ul class="nav masthead-nav">
                     <li class="active"><a href="http://keep.google.com">Google Keep</a></li>
